Fix: SF-338 Birthday validation and SF-339 Email overlap

--- a/src/SIL.XForge.Scripture/ClientApp/src/xforge-common/my-account/my-account.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/xforge-common/my-account/my-account.component.scss
@@ -26,6 +26,7 @@
   border: 2px solid red;
   padding: 1em;
   h2 {
+    word-break: break-word;
     font-weight: normal;
     margin: 0;
   }
